--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-use",
+  "name": "@znemz/react-use",
   "version": "9.7.1",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
