--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@znemz/react-use",
-  "version": "9.7.1",
+  "version": "9.7.2-0",
   "description": "Collection of React Hooks",
   "main": "lib/index.js",
   "module": "esm/index.js",
