--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "storybook:build": "build-storybook",
     "storybook:upload": "gh-pages -d storybook-static",
     "storybook:clean": "rimraf storybook-static",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "prepublish": "yarn test && yarn clean && yarn build"
   },
   "husky": {
     "hooks": {
